Fixed some z-index issues

--- a/src/style/dialog.scss
+++ b/src/style/dialog.scss
@@ -1,17 +1,17 @@
-.dialog-enter {
+.dialog-enter .transition {
   opacity: 0;
 }
 
-.dialog-enter.dialog-enter-active {
+.dialog-enter.dialog-enter-active .transition {
   opacity: 1;
   transition: opacity .3s ease;
 }
 
-.dialog-leave {
+.dialog-leave .transiation{
   opacity: 1;
 }
 
-.dialog-leave.dialog-leave-active {
+.dialog-leave.dialog-leave-active .transition {
   opacity: 0;
   transition: opacity .3s ease;
 }
